--- a/style.css
+++ b/style.css
@@ -15,7 +15,6 @@
 body{
     background-color: #84E1AD;
     font-family: Arial, Helvetica, sans-serif;
-    text-align: justify;
 }
 
 a.externo:after{
@@ -39,14 +38,12 @@ header > h1{
 }
 
 header > p{
-    margin-bottom: 25px;
     font-size: 1.2em;
-    max-width: 500px;
+    max-width: 600px;
     padding-right: 10px;
     padding-left: 10px;
+    padding-bottom: 50px;
     margin: auto;
-    margin-bottom: 30px;
-    margin-top: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.479);
 }
 
@@ -106,6 +103,7 @@ main p{
     font-size: 1em;
     text-indent: 30px;
     line-height: 1.2em;
+    text-align: justify;
 }
 
 main img.pequena{
