--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header > h1{
 header > p{
     font-size: 1.2em;
     max-width: 600px;
+    padding-top: 20px;
     padding-right: 10px;
     padding-left: 10px;
     padding-bottom: 50px;
